# ChangeLog for net-libs/aqbanking
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/aqbanking/ChangeLog,v 1.12 2005/04/13 07:03:30 hanno Exp $

*aqbanking-1.0.8 (13 Apr 2005)

  13 Apr 2005; Hanno Boeck <hanno@gentoo.org> +aqbanking-1.0.8.ebuild:
  Version bump.

*aqbanking-1.0.6 (13 Mar 2005)

  13 Mar 2005; Hanno Boeck <hanno@gentoo.org> +aqbanking-1.0.6.ebuild:
  Version bump.

  14 Feb 2005; Simon Stelling <blubb@gentoo.org>
  aqbanking-1.0.4_beta.ebuild:
  added ~amd64

  05 Feb 2005; Bryan Østergaard <kloeri@gentoo.org>
  aqbanking-1.0.4_beta.ebuild:
  ~alpha keyword.

*aqbanking-1.0.4_beta (31 Jan 2005)

  31 Jan 2005; Hanno Boeck <hanno@gentoo.org> +aqbanking-1.0.4_beta.ebuild:
  Version bump.

  30 Jan 2005; Jason Wever <weeve@gentoo.org> aqbanking-1.0.2_beta.ebuild:
  Added ~sparc keyword wrt bug #73702.

*aqbanking-1.0.2_beta (23 Jan 2005)

  23 Jan 2005; Hanno Boeck <hanno@gentoo.org> +aqbanking-1.0.2_beta.ebuild:
  Version bump.

*aqbanking-0.9.9 (13 Jan 2005)

  13 Jan 2005; Hanno Boeck <hanno@gentoo.org> +aqbanking-0.9.9.ebuild:
  Version bump.

  03 Jan 2005; Chris White <chriswhite@gentoo.org> aqbanking-0.9.8.ebuild:
  ~ppc towards bug #73702.

  27 Dec 2004; Bryan Østergaard <kloeri@gentoo.org> aqbanking-0.9.8.ebuild:
  ~alpha keyword.

*aqbanking-0.9.8 (26 Dec 2004)

  26 Dec 2004; Jason Wever <weeve@gentoo.org> aqbanking-0.9.8.ebuild:
  Added ~sparc keyword wrt bug #73702.

  21 Dec 2004; Hanno Boeck <hanno@gentoo.org> :
  Initial commit (thanks to Florian Mueller in bug #72470).
