@@ -1,0 +1,23 @@
+# Copyright 1999-2005 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/net-libs/aqbanking/Attic/aqbanking-1.1.0.ebuild,v 1.1 2005/07/12 21:51:19 hanno Exp $
+
+DESCRIPTION="Generic Online Banking Interface"
+HOMEPAGE="http://www.aquamaniac.de/aqbanking/"
+SRC_URI="mirror://sourceforge/aqbanking/${P}.tar.gz"
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~x86 ~ppc ~sparc ~alpha ~amd64"
+IUSE="debug"
+DEPEND=">=sys-libs/gwenhywfar-1.14.0
+	app-misc/ktoblzcheck"
+
+src_compile() {
+	econf `use_enable debug` || die
+	emake -j1 || die
+}
+
+src_install() {
+	make DESTDIR=${D} install || die
+	dodoc AUTHORS README COPYING doc/*
+}
