@@ -1,0 +1,1 @@
+MD5 5d65c3ef031d2ced298c42bf77a085df aqbanking-1.1.0.tar.gz 2542357
