@@ -1,6 +1,11 @@
 # ChangeLog for net-libs/aqbanking
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/aqbanking/ChangeLog,v 1.12 2005/04/13 07:03:30 hanno Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/aqbanking/ChangeLog,v 1.13 2005/07/12 21:51:19 hanno Exp $
+
+*aqbanking-1.1.0 (12 Jul 2005)
+
+  12 Jul 2005; Hanno Boeck <hanno@gentoo.org> +aqbanking-1.1.0.ebuild:
+  Version bump.
 
 *aqbanking-1.0.8 (13 Apr 2005)
 
